Fixed the spacing issue
The text size is still not right, will fix it in the next commit

--- a/source/src/static/css/pages/_resume.scss
+++ b/source/src/static/css/pages/_resume.scss
@@ -61,10 +61,12 @@
 	}
 
 	.achievements-container {
-		li{
-			margin: 0;
-			padding: 0;
-			font-size: .9em;
+		.achievement{
+			li{
+				margin: 0;
+				padding: 0;
+				font-size: .9em;
+			}
 		}
 	}
 
